deploy: nwrigh/blog-source@2438f15ae606d92dea8422162b069d15310b3d00

--- a/about/index.html
+++ b/about/index.html
@@ -7,17 +7,17 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="http://nwrigh.github.io//img/sunset.jpg">
 <meta property="twitter:image" content="http://nwrigh.github.io//img/sunset.jpg">
-<meta name=title content>
-<meta property="og:title" content>
-<meta property="twitter:title" content>
+<meta name=title content="About Me">
+<meta property="og:title" content="About Me">
+<meta property="twitter:title" content="About Me">
 <meta name=description content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="og:description" content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="twitter:description" content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="twitter:card" content="summary">
 <meta name=keyword content="Principal Engineer, Individual contributor, Public Speaking, AWS, Microservice">
 <link rel="shortcut icon" href=/img/favicon.ico>
-<title>Tags-Nicky Wrightson's Blog</title>
-<link rel=canonical href=/tags/>
+<title>About Me-Nicky Wrightson's Blog</title>
+<link rel=canonical href=/about/>
 <link rel=stylesheet href=/css/iDisqus.min.css>
 <link rel=stylesheet href=/css/bootstrap.min.css>
 <link rel=stylesheet href=/css/hux-blog.min.css>
@@ -56,13 +56,22 @@
 </div>
 </nav>
 <script>var $body=document.body,$toggle=document.querySelector('.navbar-toggle'),$navbar=document.querySelector('#huxblog_navbar'),$collapse=document.querySelector('.navbar-collapse');$toggle.addEventListener('click',handleMagic);function handleMagic(a){$navbar.className.indexOf('in')>0?($navbar.className=" ",setTimeout(function(){$navbar.className.indexOf('in')<0&&($collapse.style.height="0px")},400)):($collapse.style.height="auto",$navbar.className+=" in")}</script>
-<header class=intro-header style=background-image:url(/img/sunset.jpg)>
+<style type=text/css>header.intro-header{background-image:url(/img/sunset.jpg)}</style>
+<header class=intro-header>
 <div class=container>
 <div class=row>
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<div class=site-heading>
-<h1>Nicky Wrightson </h1>
-<span class=subheading></span>
+<div class=post-heading>
+<div class=tags>
+</div>
+<h1>About Me</h1>
+<h2 class=subheading></h2>
+<span class=meta>
+Posted by
+Nicky Wrightson
+on
+Monday, January 1, 0001
+</span>
 </div>
 </div>
 </div>
@@ -71,12 +80,26 @@
 <article>
 <div class=container>
 <div class=row>
-<div class="col-lg-8 col-lg-offset-2
+<div class="col-lg-11 col-lg-offset-1
 col-md-10 col-md-offset-1
 post-container">
+<h1 id=tldr>TLDR;</h1>
+<p><a href=https://www.linkedin.com/in/nicky-wrightson-b2707a1/>My LinkedIn</a> &mldr;. No emotional reasons behind my career choices lay here though!</p>
+<h1 id=the-longer-version>The long(er) version</h1>
+<p>I am Nicky Wrightson, Principal Engineer formally of <a href=https://www.skyscanner.net>Skyscanner</a> and of <a href=https:www.ft.com>FT</a></p>
+<p>I have worked my ways through many industries - Travel, Telcomms, Financial Sector. Not surprisingly as I have been around for a while now I have been witness to many architectures - The good, bad and the ugly &mldr; I have contributed to <em>ALL</em> of those too!</p>
+<p>Now in the systems I help build I optimise for operability, speed of delivery and/or cost. However all those three aspects are directly in conflict with each other, you <em>must</em> understand your requirements are to understand your compromises.</p>
+<p>A little background drivel - I started life out at a consultancy. Then had a wild decade of contractoring globally which took me through the telcoms industry through to front-end office trading systems via some short stints in the music industry and other parts of the financial sector. I basically flip-flopped between perm and contract, learning skills then getting a contract wage from applying those. That journey is something I could write reams on in itself however I now can&rsquo;t really think of going back towards the contract market as I started to get passionate about aspects that I just could not fufill in contract roles.</p>
+<p>I wanted to insitigate change for good - whether that be technical, social, process or organisational, as a contractor that was hard. Plus I was stuck in older tech teams within the financial services sector - My mind was yet to be blow to elastic compute and how we had so much more influence we had when we were working in the cloud.</p>
+<p>However this realisation over what I enjoyed nor what what out there would have ever happened had I not been very heavily influenced by <a href="https://www.youtube.com/watch?v=SlvN6tbU4dk">Sarah Wells</a> whom I had worked with at the very start of my career. She persuaded me to try out the Financial Times &mldr;. A blurry history on and here I am.</p>
+<p>I was working as principal engineer at Skyscanner working on the data platform, fuelling the data driven decision making and machine learning. I walked into this role without understanding much about big data at all - which is actually why I chose to work in this field. When I made that choice I knew I had a lot to learn but what I didn&rsquo;t appreciate was that I would have to throw out nearly every comfortable design paradigm I had in my toolkit when you started talking about scale of circa 2 million messages per second.</p>
+<p>This was a hard step up for me but at the end of the day I think that a principal&rsquo;s role should be able to switch between domains and definitely switch technologies. My view is that often there are several archetypes of a principal engineer - some might be deeply technically, domain specialised whilst others might be better at delivering longer term strategy exerting influence accross many squads/tribes or even further extending that influence outside the organisation to the wider tech community. I certainly at the moment fit into the later but find myself chaging roles depending on the organisation or even initiative. I plan to write more on this topic as a post &mldr;.</p>
+<hr>
+<ul class=pager>
+</ul>
 <div id=disqus-comment></div>
 </div>
-<div class="col-lg-8 col-lg-offset-2
+<div class="col-lg-11 col-lg-offset-1
 col-md-10 col-md-offset-1
 sidebar-container">
 </div>
