--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <li>
 <a href=/categories/tech>tech</a>
 </li>
-<li><a href=/top/books/>References</a></li>
-<li><a href=/top/about/>About</a></li>
+<li><a href=/references/books/>References</a></li>
+<li><a href=/about/>About</a></li>
 </ul>
 </div>
 </div>
