--- a/references/index.html
+++ b/references/index.html
@@ -16,8 +16,8 @@
 <meta property="twitter:card" content="summary">
 <meta name=keyword content="Principal Engineer, Individual contributor, Public Speaking, AWS, Microservice">
 <link rel="shortcut icon" href=/img/favicon.ico>
-<title>Tags-Nicky Wrightson's Blog</title>
-<link rel=canonical href=/tags/>
+<title>References-Nicky Wrightson's Blog</title>
+<link rel=canonical href=/references/>
 <link rel=stylesheet href=/css/iDisqus.min.css>
 <link rel=stylesheet href=/css/bootstrap.min.css>
 <link rel=stylesheet href=/css/hux-blog.min.css>
