--- a/references/books/index.html
+++ b/references/books/index.html
@@ -7,17 +7,17 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="http://nwrigh.github.io//img/sunset.jpg">
 <meta property="twitter:image" content="http://nwrigh.github.io//img/sunset.jpg">
-<meta name=title content>
-<meta property="og:title" content>
-<meta property="twitter:title" content>
+<meta name=title content="Books">
+<meta property="og:title" content="Books">
+<meta property="twitter:title" content="Books">
 <meta name=description content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="og:description" content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="twitter:description" content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="twitter:card" content="summary">
 <meta name=keyword content="Principal Engineer, Individual contributor, Public Speaking, AWS, Microservice">
 <link rel="shortcut icon" href=/img/favicon.ico>
-<title>Tags-Nicky Wrightson's Blog</title>
-<link rel=canonical href=/tags/>
+<title>Books-Nicky Wrightson's Blog</title>
+<link rel=canonical href=/references/books/>
 <link rel=stylesheet href=/css/iDisqus.min.css>
 <link rel=stylesheet href=/css/bootstrap.min.css>
 <link rel=stylesheet href=/css/hux-blog.min.css>
@@ -56,13 +56,22 @@
 </div>
 </nav>
 <script>var $body=document.body,$toggle=document.querySelector('.navbar-toggle'),$navbar=document.querySelector('#huxblog_navbar'),$collapse=document.querySelector('.navbar-collapse');$toggle.addEventListener('click',handleMagic);function handleMagic(a){$navbar.className.indexOf('in')>0?($navbar.className=" ",setTimeout(function(){$navbar.className.indexOf('in')<0&&($collapse.style.height="0px")},400)):($collapse.style.height="auto",$navbar.className+=" in")}</script>
-<header class=intro-header style=background-image:url(/img/sunset.jpg)>
+<style type=text/css>header.intro-header{background-image:url(/img/sunset.jpg)}</style>
+<header class=intro-header>
 <div class=container>
 <div class=row>
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<div class=site-heading>
-<h1>Nicky Wrightson </h1>
-<span class=subheading></span>
+<div class=post-heading>
+<div class=tags>
+</div>
+<h1>Books</h1>
+<h2 class=subheading></h2>
+<span class=meta>
+Posted by
+Nicky Wrightson
+on
+Monday, January 1, 0001
+</span>
 </div>
 </div>
 </div>
@@ -71,12 +80,38 @@
 <article>
 <div class=container>
 <div class=row>
-<div class="col-lg-8 col-lg-offset-2
+<div class="col-lg-11 col-lg-offset-1
 col-md-10 col-md-offset-1
 post-container">
+<h1 id=books>Books</h1>
+<ul>
+<li>
+<p><a href=https://samnewman.io/>Sam Newman</a></p>
+<ul>
+<li><a href=https://samnewman.io/books/building_microservices/>Building Microservices</a></li>
+<li><a href=https://samnewman.io/books/monolith-to-microservices/>Monith to microservice</a></li>
+<li><a href=https://samnewman.io/books/lightweight_monitoring/>Lightweight Monitoring</a></li>
+</ul>
+</li>
+<li>
+<p><a href=https://www.manning.com/books/ai-as-a-service>AI as a service</a></p>
+</li>
+<li>
+<p><a href=https://www.amazon.co.uk/Accelerate-Software-Performing-Technology-Organizations/dp/1942788339>Accelerate: The Science of Lean Software and Devops: Building and Scaling High Performing Technology Organizations</a></p>
+</li>
+<li>
+<p><a href="https://www.amazon.co.uk/s?k=managers+path&i=stripbooks&crid=9AQKQJJ8PZ73&sprefix=managers+pa%2Cstripbooks%2C157&ref=nb_sb_ss_fb_1_11">Managers Path</a></p>
+</li>
+</ul>
+<h1 id=talks>Talks</h1>
+<p><a href=https://www.infoq.com/presentations/discovery-organizational-culture-artifacts/>Discovery of culture through artifacts</a> by <a href=https://twitter.com/SonOfGarr>Mike McGarr</a> from Slack</p>
+<p><a href=https://www.infoq.com/presentations/12k-deployments-day>12k Deployments a day</a> by <a href=https://twitter.com/spedge>Stuart Davidson</a> at Skyscanner</p>
+<hr>
+<ul class=pager>
+</ul>
 <div id=disqus-comment></div>
 </div>
-<div class="col-lg-8 col-lg-offset-2
+<div class="col-lg-11 col-lg-offset-1
 col-md-10 col-md-offset-1
 sidebar-container">
 </div>
