deploy: nwrigh/blog-source@c84d5ca6fc40afe5616c755f257e693ddee9df75

--- a/top/about/index.html
+++ b/top/about/index.html
@@ -17,7 +17,7 @@
 <meta name=keyword content="Principal Engineer, Individual contributor, Public Speaking, AWS, Microservice">
 <link rel="shortcut icon" href=/img/favicon.ico>
 <title>About Me-Nicky Wrightson's Blog</title>
-<link rel=canonical href=/about/>
+<link rel=canonical href=/top/about/>
 <link rel=stylesheet href=/css/iDisqus.min.css>
 <link rel=stylesheet href=/css/bootstrap.min.css>
 <link rel=stylesheet href=/css/hux-blog.min.css>
@@ -48,30 +48,21 @@
 <li>
 <a href=/categories/tech>tech</a>
 </li>
-<li><a href=/references/books/>References</a></li>
-<li><a href=/about/>About</a></li>
+<li><a href=/top/books/>References</a></li>
+<li><a href=/top/about>About</a></li>
 </ul>
 </div>
 </div>
 </div>
 </nav>
 <script>var $body=document.body,$toggle=document.querySelector('.navbar-toggle'),$navbar=document.querySelector('#huxblog_navbar'),$collapse=document.querySelector('.navbar-collapse');$toggle.addEventListener('click',handleMagic);function handleMagic(a){$navbar.className.indexOf('in')>0?($navbar.className=" ",setTimeout(function(){$navbar.className.indexOf('in')<0&&($collapse.style.height="0px")},400)):($collapse.style.height="auto",$navbar.className+=" in")}</script>
-<style type=text/css>header.intro-header{background-image:url(/img/sunset.jpg)}</style>
-<header class=intro-header>
+<header class=intro-header style=background-image:url(/img/sunset.jpg)>
 <div class=container>
 <div class=row>
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<div class=post-heading>
-<div class=tags>
-</div>
-<h1>About Me</h1>
-<h2 class=subheading></h2>
-<span class=meta>
-Posted by
-Nicky Wrightson
-on
-Monday, October 11, 2021
-</span>
+<div class=site-heading>
+<h1>Nicky Wrightson </h1>
+<span class=subheading></span>
 </div>
 </div>
 </div>
@@ -94,9 +85,6 @@ post-container">
 <p>However this realisation over what I enjoyed nor what what out there would have ever happened had I not been very heavily influenced by <a href="https://www.youtube.com/watch?v=SlvN6tbU4dk">Sarah Wells</a> whom I had worked with at the very start of my career. She persuaded me to try out the Financial Times &mldr;. A blurry history on and here I am.</p>
 <p>I was working as principal engineer at Skyscanner working on the data platform, fuelling the data driven decision making and machine learning. I walked into this role without understanding much about big data at all - which is actually why I chose to work in this field. When I made that choice I knew I had a lot to learn but what I didn&rsquo;t appreciate was that I would have to throw out nearly every comfortable design paradigm I had in my toolkit when you started talking about scale of circa 2 million messages per second.</p>
 <p>This was a hard step up for me but at the end of the day I think that a principal&rsquo;s role should be able to switch between domains and definitely switch technologies. My view is that often there are several archetypes of a principal engineer - some might be deeply technically, domain specialised whilst others might be better at delivering longer term strategy exerting influence accross many squads/tribes or even further extending that influence outside the organisation to the wider tech community. I certainly at the moment fit into the later but find myself chaging roles depending on the organisation or even initiative. I plan to write more on this topic as a post &mldr;.</p>
-<hr>
-<ul class=pager>
-</ul>
 <div id=disqus-comment></div>
 </div>
 <div class="col-lg-11 col-lg-offset-1
