--- a/top/books/index.html
+++ b/top/books/index.html
@@ -7,17 +7,17 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="http://nwrigh.github.io//img/sunset.jpg">
 <meta property="twitter:image" content="http://nwrigh.github.io//img/sunset.jpg">
-<meta name=title content>
-<meta property="og:title" content>
-<meta property="twitter:title" content>
+<meta name=title content="Books">
+<meta property="og:title" content="Books">
+<meta property="twitter:title" content="Books">
 <meta name=description content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="og:description" content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="twitter:description" content="Tech tinkering and general wanderings from an inquisitive mind">
 <meta property="twitter:card" content="summary">
 <meta name=keyword content="Principal Engineer, Individual contributor, Public Speaking, AWS, Microservice">
 <link rel="shortcut icon" href=/img/favicon.ico>
-<title>References-Nicky Wrightson's Blog</title>
-<link rel=canonical href=/references/>
+<title>Books-Nicky Wrightson's Blog</title>
+<link rel=canonical href=/top/books/>
 <link rel=stylesheet href=/css/iDisqus.min.css>
 <link rel=stylesheet href=/css/bootstrap.min.css>
 <link rel=stylesheet href=/css/hux-blog.min.css>
@@ -48,8 +48,8 @@
 <li>
 <a href=/categories/tech>tech</a>
 </li>
-<li><a href=/references/books/>References</a></li>
-<li><a href=/about/>About</a></li>
+<li><a href=/top/books/>References</a></li>
+<li><a href=/top/about>About</a></li>
 </ul>
 </div>
 </div>
@@ -71,12 +71,35 @@
 <article>
 <div class=container>
 <div class=row>
-<div class="col-lg-8 col-lg-offset-2
+<div class="col-lg-11 col-lg-offset-1
 col-md-10 col-md-offset-1
 post-container">
+<h1 id=books>Books</h1>
+<ul>
+<li>
+<p><a href=https://samnewman.io/>Sam Newman</a></p>
+<ul>
+<li><a href=https://samnewman.io/books/building_microservices/>Building Microservices</a></li>
+<li><a href=https://samnewman.io/books/monolith-to-microservices/>Monith to microservice</a></li>
+<li><a href=https://samnewman.io/books/lightweight_monitoring/>Lightweight Monitoring</a></li>
+</ul>
+</li>
+<li>
+<p><a href=https://www.manning.com/books/ai-as-a-service>AI as a service</a></p>
+</li>
+<li>
+<p><a href=https://www.amazon.co.uk/Accelerate-Software-Performing-Technology-Organizations/dp/1942788339>Accelerate: The Science of Lean Software and Devops: Building and Scaling High Performing Technology Organizations</a></p>
+</li>
+<li>
+<p><a href="https://www.amazon.co.uk/s?k=managers+path&i=stripbooks&crid=9AQKQJJ8PZ73&sprefix=managers+pa%2Cstripbooks%2C157&ref=nb_sb_ss_fb_1_11">Managers Path</a></p>
+</li>
+</ul>
+<h1 id=talks>Talks</h1>
+<p><a href=https://www.infoq.com/presentations/discovery-organizational-culture-artifacts/>Discovery of culture through artifacts</a> by <a href=https://twitter.com/SonOfGarr>Mike McGarr</a> from Slack</p>
+<p><a href=https://www.infoq.com/presentations/12k-deployments-day>12k Deployments a day</a> by <a href=https://twitter.com/spedge>Stuart Davidson</a> at Skyscanner</p>
 <div id=disqus-comment></div>
 </div>
-<div class="col-lg-8 col-lg-offset-2
+<div class="col-lg-11 col-lg-offset-1
 col-md-10 col-md-offset-1
 sidebar-container">
 </div>
