deploy: nwrigh/blog-source@5156ac91dbdcd8714218a5e119d37f47880182ce

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ sidebar-container">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 <ul class="list-inline text-center">
 <li>
-<a href=mailto:nickywrightson@gmail.com>
+<a href=mailto:nicky@nickywrightson.com>
 <span class="fa-stack fa-lg">
 <i class="fa fa-circle fa-stack-2x"></i>
 <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
