--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
 </div>
 </div>
 </header>
-<header class=intro-header style=background-image:url(/img/404-bg.jpg)>
+<header class=intro-header style=background-image:url(/img/404.jpg)>
 <div class=container>
 <div class=row>
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
