--- a/wedding.html
+++ b/wedding.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Our Wedding</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: #f4f4f4;
+            }
+            header {
+                background-color: #f0e5d8;
+                color: #54494b;
+                padding: 10px;
+                text-align: center;
+            }
+            #timeline, #service-location, #venue-location, #description {
+                margin: 20px;
+                padding: 20px;
+                border-radius: 10px;
+                background-color: #ffffff;
+                box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+            }
+            img {
+                max-width: 100%;
+                height: auto;
+            }
+            h1, h2, p {
+                margin-bottom: 20px;
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Our Wedding</h1>
+        </header>
+
+        <div id="timeline">
+            <h2>Timeline</h2>
+            <!-- Add your timeline details here. -->
+        </div>
+
+        <div id="service-location">
+            <h2>Service Location</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2493.743225090442!2d0.8885752763265241!3d51.31584827177039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ded31db7623e25%3A0x2222f3544a4df06e!2sGuildhall!5e0!3m2!1sen!2suk!4v1683956989880!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <div id="venue-location">
+            <h2>Venue Location</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.980990576675!2d0.8762558763274695!3d51.329869471773485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ded33ba64eb523%3A0x18e2f5eace56b754!2sThree%20Mariners!5e0!3m2!1sen!2suk!4v1683957018042!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <div id="description">
+            <h2>Description</h2>
+            <!-- Add your description here. -->
+        </div>
+    </body>
+</html>
 
